--- a/games/Assassins_Creed_IV.html
+++ b/games/Assassins_Creed_IV.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>Fallout 4</title>
+    <title>Assassin’s Creed IV Black Flag</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,22 +43,21 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>Fallout 4</span></h2>
+                                            <h2><span>Assassin’s Creed IV Black Flag</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/377160/Fallout_4/"> store.steampowered.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/242050/Assassins_Creed_IV_Black_Flag/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>Bethesda Game Studios, відзначені нагородами творці Fallout 3 та The Elder Scrolls V: Skyrim, вітають вас у світі Fallout 4 - їх найпопуллярніші ігри в історії та наступного покоління ігор з відкритим світом.
-                                                 </br>
-                                                    Як єдиний виживший сховища 111, ви потрапляєте у світ, зруйнований ядерною війною. Кожна секунда - це боротьба за виживання, і кожен вибір за вами. Лише ви можете відновити і визначити долю Пустоші. Ласкаво просимо додому.</p>
+                                                <p>Рік - 1715. Пірати керують Карибським морем і створили власну беззаконну республіку, де корупція, жадібність та жорстокість є звичним явищем.
+                                                </br>Серед цих злочинців - зухвалий молодий капітан на ім'я Едвард Кенвей. Його боротьба за славу завоювала йому повагу серед легенд, як Чорна Борода, але також втягнула його в давню війну між вбивцями та тамплієрами, війну, яка може зруйнувати все, що побудували пірати.</p>
                                            </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Відкритий світ, одиночна, атмосверна, від 1 лиця, від 3 лиця, наукова фантастика, пригоди, постапокаліпсис, шутер, тактика, розбудова міста, дослідження, крафт.</p>
+                                            <p>Стратегія, історія, убивця, паркур, відкритий світ, стелс, одиночна, повість, виживання, тактика, атмосфера, пригоди, пірати, фантастика</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="Fallout_4/fallaut4.png" alt="">
+                                        <img src="Assassin's_Creed_IV/black_flag.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -69,20 +68,20 @@
                                         <td>РЕКОМЕНДОВАНІ:</td>
                                     </tr>
                                     <tr>
+                                        <td>ОС: Windows XP or Windows Vista</td>
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>ntel Core i5-2300 2.8 GHz/AMD Phenom II X4 945 3.0 GHz or equivalent</td>
-                                        <td>Intel Core i7 4790 3.6 GHz/AMD FX-9590 4.7 GHz or equivalent</td>
+                                        <td>Intel Core2Quad Q8400 @ 2.6 GHz або AMD Athlon II X4 620 @ 2.6 GHz</td>
+                                        <td>Intel Core i5 2400S @ 2.5 GHz or better або AMD Phenom II x4 940 @ 3.0 GHz</td>
                                     </tr>
                                     <tr>
-                                        <td>6 GB ОП</td>
-                                        <td>8 GB ОП</td>
+                                        <td>2 GB ОП</td>
+                                        <td>4 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GTX 550 Ti 2GB/AMD Radeon HD 7870 2GB or equivalent</td>
-                                        <td>NVIDIA GTX 780 3GB/AMD Radeon R9 290X 4GB or equivalent</td>
+                                        <td>Nvidia Geforce GTX 260 or AMD Radeon HD 4870</td>
+                                        <td>Nvidia GeForce GTX 470 or AMD Radeon HD 5850</td>
                                     </tr>
                                     <tr id="last">
                                         <td>30 GB доступного місця</td>
@@ -141,7 +140,7 @@
                                       <input  type="button" value="Відмінити" name="reset" id="reset" onclick="escaped()">
                                  </div>
                              </div>
-                        <script src="Fallout_4/reting.js" >
+                        <script src="Assassin's_Creed_IV/reting.js" >
                         </script>
                     </form>
                 </div>
