--- a/games/The_Elder_Scrolls_V_Skyrim.html
+++ b/games/The_Elder_Scrolls_V_Skyrim.html
@@ -45,14 +45,14 @@
                                     <div class="title_autor" id="title_autor">
                                             <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/">store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                <p>Skyrim Special Edition, який отримав понад 200 нагород "Гра року", втілює в життя епічне фентезі з приголомшливими деталями. Спеціальне видання включає в себе і отримала визнання критиків гри і доповнення з абсолютно новими функціями, такими як оновлені зображення і ефекти, об'ємні божественні промені, динамічна глибина різкосі, відображення в просторі екрану і багато іншого. Skyrim Special Edition також забезпечує повну потужність модів для ПК та консолей. </p>
+                                          </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт.</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
@@ -94,7 +94,7 @@
                             <div class="form">
                                     <img src="../icons/very_bed.png" alt="">
                                         <div class="result_f" id="result_v_b" >
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/very_bed.txt">
+                                            <p>1</p>
                                         </div>
                                     <input id="radio-1" type="radio" name="radio" value="value1">
                                     <label for="radio-1">VERY BED</label>
@@ -102,7 +102,7 @@
                                 <div class="form">
                                     <img src="../icons/bed.png" alt="">
                                         <div class="result_f" id="result_b">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/bed.txt">
+                                            <p>1</p>
                                         </div>
                                     <input id="radio-2" type="radio" name="radio" value="value2">
                                     <label for="radio-2">BED</label>
@@ -110,7 +110,7 @@
                                 <div class="form">
                                     <img src="../icons/so_so.png" alt="">
                                          <div class="result_f" id="result_s">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/so_so.txt">
+                                            <p>1</p>
                                          </div>
                                     <input id="radio-3" type="radio" name="radio" value="value3">
                                     <label for="radio-3">SO-SO</label>
@@ -118,7 +118,7 @@
                                 <div class="form">
                                     <img src="../icons/good.png" alt="">
                                         <div class="result_f" id="result_g" value="4">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/good.txt">
+                                            <p>1</p>
                                         </div>
                                     <input id="radio-4" type="radio" name="radio" value="value4">
                                     <label for="radio-4">GOOD</label>
@@ -126,7 +126,7 @@
                                 <div class="form">
                                     <img src="../icons/very good.png" alt="">
                                         <div class="result_f" id="result_v_g" >
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/very_bed.txt">
+                                            <p>1</p>
                                         </div>
                                     <input id="radio-5" type="radio" name="radio" value="value5">
                                     <label for="radio-5">VERY GOOD</label>
@@ -144,32 +144,32 @@
                     </form>
                 </div>
             </div>    
-         <div class="news_line" id="news_line">
-             <div class="first_news">
-                 <a href="">
-               <img src="../newsline/image/1.jpg"  alt>
-               <div class="first_news_text" >
-          <embed src="../newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
-                </div>
-            </a>
-                </div>
-            <div class="second_news">
-                    <a href="">
-                  <img src="../newsline/image/2.jpg"  alt>
-                  <div class="second_news_text" >
-                    <embed src="../newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
+            <div class="news_line" id="news_line">
+                <div class="first_news">
+                    <a href="../newsline/1/1.html">
+                  <img src="../newsline/image/1.jpg"  alt>
+                  <div class="first_news_text" >
+             <embed src="../newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
                    </div>
                </a>
-               </div>
-            <div class="third_news">
-                <a href="">
-                  <img src="../newsline/image/3.jpg"  alt>
-                  <div class="third_news_text" >
-                    <embed src="../newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
                    </div>
-                </a>
-                </div>
-        </div>
+               <div class="second_news">
+                <a href="../newsline/2/2.html">
+                     <img src="../newsline/image/2.jpg"  alt>
+                     <div class="second_news_text" >
+                       <embed src="../newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
+                      </div>
+                  </a>
+                  </div>
+               <div class="third_news">
+                   <a href="../newsline/3/3.html">
+                     <img src="../newsline/image/3.jpg"  alt>
+                     <div class="third_news_text" >
+                       <embed src="../newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
+                      </div>
+                   </a>
+                   </div>
+           </div>
     </div>
      
     <div class="footer wrap" id="footer">
