--- a/games/The_witcher3.html
+++ b/games/The_witcher3.html
@@ -94,7 +94,7 @@
                             <div class="form">
                                     <img src="../icons/very_bed.png" alt="">
                                         <div class="result_f" id="result_v_b" >
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/very_bed.txt">
+                                            <p>1</p>
                                         </div>
                                     <input id="radio-1" type="radio" name="radio" value="value1">
                                     <label for="radio-1">VERY BED</label>
@@ -102,7 +102,7 @@
                                 <div class="form">
                                     <img src="../icons/bed.png" alt="">
                                         <div class="result_f" id="result_b">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/bed.txt">
+                                            <p>1</p>
                                         </div>
                                     <input id="radio-2" type="radio" name="radio" value="value2">
                                     <label for="radio-2">BED</label>
@@ -110,7 +110,7 @@
                                 <div class="form">
                                     <img src="../icons/so_so.png" alt="">
                                          <div class="result_f" id="result_s">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/so_so.txt">
+                                            <p>1</p>
                                          </div>
                                     <input id="radio-3" type="radio" name="radio" value="value3">
                                     <label for="radio-3">SO-SO</label>
@@ -118,7 +118,7 @@
                                 <div class="form">
                                     <img src="../icons/good.png" alt="">
                                         <div class="result_f" id="result_g" value="4">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/good.txt">
+                                            <p>1</p>
                                         </div>
                                     <input id="radio-4" type="radio" name="radio" value="value4">
                                     <label for="radio-4">GOOD</label>
@@ -126,7 +126,7 @@
                                 <div class="form">
                                     <img src="../icons/very good.png" alt="">
                                         <div class="result_f" id="result_v_g" >
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/very_bed.txt">
+                                            <p>1</p>
                                         </div>
                                     <input id="radio-5" type="radio" name="radio" value="value5">
                                     <label for="radio-5">VERY GOOD</label>
@@ -139,37 +139,37 @@
                                       <input  type="button" value="Відмінити" name="reset" id="reset" onclick="escaped()">
                                  </div>
                              </div>
-                        <script src="The_Elder_Scrolls_V_Skyrim/reting.js" >
+                        <script src="The_witcher3/reting.js" >
                         </script>
                     </form>
                 </div>
             </div>    
-         <div class="news_line" id="news_line">
-             <div class="first_news">
-                 <a href="">
-               <img src="../newsline/image/1.jpg"  alt>
-               <div class="first_news_text" >
-          <embed src="../newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
-                </div>
-            </a>
-                </div>
-            <div class="second_news">
-                    <a href="">
-                  <img src="../newsline/image/2.jpg"  alt>
-                  <div class="second_news_text" >
-                    <embed src="../newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
+            <div class="news_line" id="news_line">
+                <div class="first_news">
+                    <a href="../newsline/1/1.html">
+                  <img src="../newsline/image/1.jpg"  alt>
+                  <div class="first_news_text" >
+             <embed src="../newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
                    </div>
                </a>
-               </div>
-            <div class="third_news">
-                <a href="">
-                  <img src="../newsline/image/3.jpg"  alt>
-                  <div class="third_news_text" >
-                    <embed src="../newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
                    </div>
-                </a>
-                </div>
-        </div>
+               <div class="second_news">
+                <a href="../newsline/2/2.html">
+                     <img src="../newsline/image/2.jpg"  alt>
+                     <div class="second_news_text" >
+                       <embed src="../newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
+                      </div>
+                  </a>
+                  </div>
+               <div class="third_news">
+                   <a href="../newsline/3/3.html">
+                     <img src="../newsline/image/3.jpg"  alt>
+                     <div class="third_news_text" >
+                       <embed src="../newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
+                      </div>
+                   </a>
+                   </div>
+           </div>
     </div>
      
     <div class="footer wrap" id="footer">
