--- a/games/games.html
+++ b/games/games.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>Поради</title>
+    <title>Популярні ігри</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -106,17 +106,17 @@
                         </a></td>
                     </tr>
                     <tr>
-                        <td><a href="../games/Assassin's_Creed_Odyssey.html">
+                        <td><a href="../games/Assassins_Creed_Odyssey.html">
                             <div class="advices_info" id="advices_info">
-                                <p><span>Assassin's Creed Odyssey</span>
+                                <p><span>Assassins Creed Odyssey</span>
                             </p></div>
                             <img src="../games/Assassin's_Creed_Odyssey/odysset.jpg" alt="">
                         </a></td>
-                        <td><a href="../games/Assassin’s_Creed_IV.html">
+                        <td><a href="../games/Assassins_Creed_IV.html">
                             <div class="advices_info" id="advices_info">
-                                <p><span>Assassin’s Creed IV Black Flag</span>
+                                <p><span>Assassins Creed IV Black Flag</span>
                             </p></div>
-                            <img src="../games/Assassin’s_Creed_IV/black_flag.jpg" alt="">
+                            <img src="../games/Assassin's_Creed_IV/black_flag.jpg" alt="">
                         </a></td>
                         <td><a href="../games/The_witcher3.html">
                             <div class="advices_info" id="advices_info">
@@ -126,11 +126,11 @@
                         </a></td>
                     </tr>
                     <tr>
-                            <td><a href="../games/Railway_Empire.html">
+                            <td><a href="../games/Horizon_Zero_Dawn.html">
                                 <div class="advices_info" id="advices_info">
-                                    <p><span>Railway Empire</span>
+                                    <p><span>Horizon Zero Dawn</span>
                                 </p></div>
-                                <img src="../games/Railway_Empire/Railway Empire.jpg" alt="">
+                                <img src="../games/Horizon_Zero_Dawn/Horizon-Zero-Dawn-Game-Logo.jpg" alt="">
                             </a></td>
                             <td><a href="../games/Shadow_Tactics.html">
                                 <div class="advices_info" id="advices_info">
@@ -149,31 +149,31 @@
             </div>
         </div>          
         <div class="news_line" id="news_line">
-                <div class="first_news">
-                    <a href="">
-                  <img src="../newsline/image/1.jpg"  alt>
-                  <div class="first_news_text" >
-             <embed src="../newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
-                   </div>
-               </a>
-                   </div>
-               <div class="second_news">
-                       <a href="">
-                     <img src="../newsline/image/2.jpg"  alt>
-                     <div class="second_news_text" >
-                       <embed src="../newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
-                      </div>
-                  </a>
+            <div class="first_news">
+                <a href="../newsline/1/1.html">
+              <img src="../newsline/image/1.jpg"  alt>
+              <div class="first_news_text" >
+         <embed src="../newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
+               </div>
+           </a>
+               </div>
+           <div class="second_news">
+            <a href="../newsline/2/2.html">
+                 <img src="../newsline/image/2.jpg"  alt>
+                 <div class="second_news_text" >
+                   <embed src="../newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
                   </div>
-               <div class="third_news">
-                   <a href="">
-                     <img src="../newsline/image/3.jpg"  alt>
-                     <div class="third_news_text" >
-                       <embed src="../newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
-                      </div>
-                   </a>
-                   </div>
-           </div>
+              </a>
+              </div>
+           <div class="third_news">
+               <a href="../newsline/3/3.html">
+                 <img src="../newsline/image/3.jpg"  alt>
+                 <div class="third_news_text" >
+                   <embed src="../newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
+                  </div>
+               </a>
+               </div>
+       </div>
     </div>
      
     <div class="footer wrap" id="footer">
