--- a/games/Assassins_Creed_Odyssey.html
+++ b/games/Assassins_Creed_Odyssey.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>Fallout 4</title>
+    <title>Assassin's Creed Odyssey</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,22 +43,22 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>Fallout 4</span></h2>
+                                            <h2><span>Assassin's Creed Odyssey</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/377160/Fallout_4/"> store.steampowered.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/812140/Assassins_Creed_Odyssey/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>Bethesda Game Studios, відзначені нагородами творці Fallout 3 та The Elder Scrolls V: Skyrim, вітають вас у світі Fallout 4 - їх найпопуллярніші ігри в історії та наступного покоління ігор з відкритим світом.
-                                                 </br>
-                                                    Як єдиний виживший сховища 111, ви потрапляєте у світ, зруйнований ядерною війною. Кожна секунда - це боротьба за виживання, і кожен вибір за вами. Лише ви можете відновити і визначити долю Пустоші. Ласкаво просимо додому.</p>
+                                                <p>Від ізгоя до живої легенди, вирушайте в одісею, щоб розкрити таємниці свого минулого та змінити долю Стародавньої Греції.
+                                                Від пишних яскравих лісів до вулканічних островів та жвавих міст, розпочніть мандрівку дослідженням та зустрічами у розірваному війною світі, сформованому богами та людьми.        
+                                                Ваші рішення вплинуть на те, як розгортається ваша одісея. Пройдіть кілька кінців завдяки новій системі діалогу та вибору, який ви робите.</p>
                                            </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Відкритий світ, одиночна, атмосверна, від 1 лиця, від 3 лиця, наукова фантастика, пригоди, постапокаліпсис, шутер, тактика, розбудова міста, дослідження, крафт.</p>
+                                            <p>Стратегія, історія, убивця, відкритий світ, стелс, паркур, дорослий вміст, одиночна, повість, виживання, тактика, атмосфкра, пригоди, крафт, фантастика</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="Fallout_4/fallaut4.png" alt="">
+                                        <img src="Assassin's_Creed_Odyssey/odysset.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -69,24 +69,24 @@
                                         <td>РЕКОМЕНДОВАНІ:</td>
                                     </tr>
                                     <tr>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
+                                        <td>ОС: Windows XP or Windows Vista</td>
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>ntel Core i5-2300 2.8 GHz/AMD Phenom II X4 945 3.0 GHz or equivalent</td>
-                                        <td>Intel Core i7 4790 3.6 GHz/AMD FX-9590 4.7 GHz or equivalent</td>
+                                        <td>AMD FX 6300 @ 3.8 GHz, Ryzen 3 - 1200, Intel Core i5 2400 @ 3.1 GHz</td>
+                                        <td>AMD FX-8350 @ 4.0 GHz, Ryzen 5 - 1400, Intel Core i7-3770 @ 3.5 GHz</td>
                                     </tr>
                                     <tr>
-                                        <td>6 GB ОП</td>
+                                        <td>8 GB ОП</td>
                                         <td>8 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GTX 550 Ti 2GB/AMD Radeon HD 7870 2GB or equivalent</td>
-                                        <td>NVIDIA GTX 780 3GB/AMD Radeon R9 290X 4GB or equivalent</td>
+                                        <td>AMD Radeon R9 285, NVIDIA GeForce GTX 660</td>
+                                        <td>AMD Radeon R9 290, NVIDIA GeForce GTX 970</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>30 GB доступного місця</td>
-                                        <td>30 GB доступного місця</td>
+                                        <td>46+ GB доступного місця</td>
+                                        <td>46+ GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
@@ -141,7 +141,7 @@
                                       <input  type="button" value="Відмінити" name="reset" id="reset" onclick="escaped()">
                                  </div>
                              </div>
-                        <script src="Fallout_4/reting.js" >
+                        <script src="Assassin's_Creed_Odyssey/reting.js" >
                         </script>
                     </form>
                 </div>
