--- a/games/Horizon_Zero_Dawn.html
+++ b/games/Horizon_Zero_Dawn.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>Fallout 4</title>
+    <title>Railway Empire</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,22 +43,21 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>Fallout 4</span></h2>
+                                            <h2><span>Railway Empire</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/377160/Fallout_4/"> store.steampowered.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/503940/Railway_Empire/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>Bethesda Game Studios, відзначені нагородами творці Fallout 3 та The Elder Scrolls V: Skyrim, вітають вас у світі Fallout 4 - їх найпопуллярніші ігри в історії та наступного покоління ігор з відкритим світом.
-                                                 </br>
-                                                    Як єдиний виживший сховища 111, ви потрапляєте у світ, зруйнований ядерною війною. Кожна секунда - це боротьба за виживання, і кожен вибір за вами. Лише ви можете відновити і визначити долю Пустоші. Ласкаво просимо додому.</p>
+                                                 <p>Разом з Елой з племені Нора вирушайте в подорож по загадковому світу, яким правлять смертоносні машини.
+                                                 </br>Будучи ізгоєм у своєму племені, юна мисливиця прагне дізнатися таємниці свого минулого, зрозуміти своє призначення... і зупинити загрозу, яка в майбутньому може обернутися катастрофою.</p>
                                            </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Відкритий світ, одиночна, атмосверна, від 1 лиця, від 3 лиця, наукова фантастика, пригоди, постапокаліпсис, шутер, тактика, розбудова міста, дослідження, крафт.</p>
+                                            <p>Відкриий світ, приголи, одиночна, постапокаліпсис, наукова фантастика, від 3 лиця, полювання, стелс</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="Fallout_4/fallaut4.png" alt="">
+                                        <img src="Horizon_Zero_Dawn/Horizon-Zero-Dawn-Game-Logo.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -69,24 +68,24 @@
                                         <td>РЕКОМЕНДОВАНІ:</td>
                                     </tr>
                                     <tr>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
+                                        <td>ОС: Windows 10 64-bits</td>
+                                        <td>ОС: Windows 10 64-bits</td>
                                     </tr>
                                     <tr>
-                                        <td>ntel Core i5-2300 2.8 GHz/AMD Phenom II X4 945 3.0 GHz or equivalent</td>
-                                        <td>Intel Core i7 4790 3.6 GHz/AMD FX-9590 4.7 GHz or equivalent</td>
+                                        <td>Intel Core i5-2500K@3.3GHz or AMD FX 6300@3.5GHz</td>
+                                        <td>Intel Core i7-4770K@3.5GHz or Ryzen 5 1500X@3.5GHz</td>
                                     </tr>
                                     <tr>
-                                        <td>6 GB ОП</td>
                                         <td>8 GB ОП</td>
+                                        <td>16 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GTX 550 Ti 2GB/AMD Radeon HD 7870 2GB or equivalent</td>
-                                        <td>NVIDIA GTX 780 3GB/AMD Radeon R9 290X 4GB or equivalent</td>
+                                        <td>Nvidia GeForce GTX 780 (3 GB) or AMD Radeon R9 290 (4GB)</td>
+                                        <td>Nvidia GeForce GTX 1060 (6 GB) or AMD Radeon RX 580 (8GB)</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>30 GB доступного місця</td>
-                                        <td>30 GB доступного місця</td>
+                                        <td>100 GB доступного місця</td>
+                                        <td>100 GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
@@ -141,7 +140,7 @@
                                       <input  type="button" value="Відмінити" name="reset" id="reset" onclick="escaped()">
                                  </div>
                              </div>
-                        <script src="Fallout_4/reting.js" >
+                        <script src="Horizon_Zero_Dawn/reting.js" >
                         </script>
                     </form>
                 </div>
