--- a/newsline/first_news_text.html
+++ b/newsline/first_news_text.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="style/style_news.css">
-    <div class="news_text" >
-    <h2><p><br><br>DOTA. Dragon's Blood<br><br></p></h2>
+<link rel="stylesheet" href="style/style_news.css "> 
+<div class="news_text" onclick="first_new()">
+    <h2><p><br><br>DOTA. Dragon's Blood<br><br></p></h2 >
  <p> Аніме по відомій грі Dota 2. Девіон - знаменитий дракона лицар, який присвятив своє життя боротьбі проти зла. Зустрівши принцесу МІРАННА і стародавнього ельдвурма - він виявляється втягнутий в події, куди більш масштабні, ніж все, що до цього з ним траплялося.   
  </p>
     </div>
-
+    <script src="../js/first_news.js"></script>
