--- a/newsline/second_news_text.html
+++ b/newsline/second_news_text.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="style/style_news.css">
-    <div class="news_text" >
+    <div class="news_text" onclick="first_new()">
     <h2><p><br><br>Леді Дімітреска<br><br></p></h2>
  <p> Косплей на Леді Дімітреску від найвищої супермоделі і чемпіонки Європи з баскетболу. </p>
     </div>
-
+    <script src="../js/second_news.js"></script>
