--- a/newsline/third_news_text.html
+++ b/newsline/third_news_text.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="style/style_news.css">
-    <div class="news_text" >
+    <div class="news_text" onclick="first_new()">
     <h2><p><br><br>NAVI<br><br></p></h2>
  <p> Створений бути забутим - огляд фільму "NAVI. Народжені перемагати" </p>
     </div>
-
+    <script src="../js/third_news.js"></script>
