--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>          
         <div class="news_line" id="news_line">
                 <div class="first_news">
-                    <a href="">
+                    <a href="newsline/1/1.html">
                   <img src="newsline/image/1.jpg"  alt>
                   <div class="first_news_text" >
              <embed src="newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
@@ -75,7 +75,7 @@
                </a>
                    </div>
                <div class="second_news">
-                       <a href="">
+                       <a href="newsline/2/2.html">
                      <img src="newsline/image/2.jpg"  alt>
                      <div class="second_news_text" >
                        <embed src="newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
@@ -83,7 +83,7 @@
                   </a>
                   </div>
                <div class="third_news">
-                   <a href="">
+                   <a href="newsline/3/3.html">
                      <img src="newsline/image/3.jpg"  alt>
                      <div class="third_news_text" >
                        <embed src="newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
